chore(doc): added swagger
